advance-routing/virtual-service-reviews-mirror-v3-in-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: reviews
        subset: v3
    mirror:
      host: reviews
      subset: v1
  - route:
    - destination:
        host: reviews
        subset: v2
